--- a/fadderjobb/static/css/jobsignup.css
+++ b/fadderjobb/static/css/jobsignup.css
@@ -42,6 +42,7 @@
 
 .filter-checkbox {
     position: relative;
+    height: 100%;
 }
 
 .filter-checkbox input {
@@ -54,13 +55,15 @@
 
 .filter-checkbox label {
     margin: 0;
+    height: 100%;
 }
 
 .filter-checkbox span {
     display: inline-block;
-    padding: 10px 15px;
+    padding: 13px 15px 7px;
     font-weight: bold;
-    font-size: 150%;
+    font-size: 120%;
+    height: 100%;
 
     transition: all .1s linear;
 }
@@ -87,6 +90,15 @@
 .filter-checkbox input:checked + .form-check-label-yes {
     background-color: #63bf69;
     color: white;
+}
+
+.form-check-label-yes::before {
+    height: 100%;
+    content: "JA";
+}
+
+.form-check-label-no::before {
+    content: "NEJ";
 }
 
 .day {
