--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <body>
 <script src="{% static 'jquery/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'bootstrap/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'js/base.js' %}"></script>
+<script src="{% static 'js/index.js' %}"></script>
 {% block scripts %}{% endblock scripts %}
 
 <nav class="navbar navbar-expand-md navbar-light bg-light">
