--- a/templates/jobsignup.html
+++ b/templates/jobsignup.html
@@ -26,16 +26,17 @@
                 <label>
                     <input type="checkbox" name="signedup"
                            value="0" {% if filter_signedup == "0" %}checked{% endif %}>
-                    <span class="form-check-label-no"></span>
+                    <span class="form-check-label form-check-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="signedup"
                            value="1" {% if filter_signedup == "1" %}checked{% endif %}>
-                    <span class="form-check-label-yes"></span>
+                    <span class="form-check-label form-check-label-yes"></span>
                 </label>
             </div>
+            <div class="filter-checkbox-caret"></div>
         </div>
         <div class="filter filter-checkbox-container" id="filter-full">
             <div>Fullt</div>
@@ -43,16 +44,17 @@
                 <label>
                     <input type="checkbox" name="full"
                            value="0" {% if filter_full == "0" %}checked{% endif %}>
-                    <span class="form-check-label-no"></span>
+                    <span class="form-check-label form-check-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="full"
                            value="1" {% if filter_full == "1" %}checked{% endif %}>
-                    <span class="form-check-label-yes"></span>
+                    <span class="form-check-label form-check-label-yes"></span>
                 </label>
             </div>
+            <div class="filter-checkbox-caret"></div>
         </div>
         <div class="filter filter-checkbox-container" id="filter-leavequeue">
             <div>Faddrar vill lämna</div>
@@ -60,16 +62,17 @@
                 <label>
                     <input type="checkbox" name="leavequeue"
                            value="0" {% if filter_leavequeue == "0" %}checked{% endif %}>
-                    <span class="form-check-label-no"></span>
+                    <span class="form-check-label form-check-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="leavequeue"
                            value="1" {% if filter_leavequeue == "1" %}checked{% endif %}>
-                    <span class="form-check-label-yes"></span>
+                    <span class="form-check-label form-check-label-yes"></span>
                 </label>
             </div>
+            <div class="filter-checkbox-caret"></div>
         </div>
         <div class="filter filter-checkbox-container" id="filter-enterqueue">
             <div>Faddrar köar</div>
@@ -77,19 +80,20 @@
                 <label>
                     <input type="checkbox" name="enterqueue"
                            value="0" {% if filter_enterqueue == "0" %}checked{% endif %}>
-                    <span class="form-check-label-no"></span>
+                    <span class="form-check-label form-check-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="enterqueue"
                            value="1" {% if filter_enterqueue == "1" %}checked{% endif %}>
-                    <span class="form-check-label-yes"></span>
+                    <span class="form-check-label form-check-label-yes"></span>
                 </label>
             </div>
+            <div class="filter-checkbox-caret"></div>
         </div>
         <div class="filter filter-select">
-            <label for="filter-jobtype">Typ:</label>
+            <label for="filter-jobtype">Typ</label>
             <select id="filter-jobtype" name="jobtype">
                 <option></option>
                 {% for type in jobtypes %}
