Filter visualisation stay when refreshing

--- a/fadderjobb/static/css/jobsignup.css
+++ b/fadderjobb/static/css/jobsignup.css
@@ -43,6 +43,10 @@
     opacity: 0;
 }
 
+.filter-checkbox-caret.noanimate {
+    transition: none;
+}
+
 .filter-select > label {
     margin: 0 10px 0 0;
 }
