--- a/fadderjobb/static/bootstrap/lux.bootstrap.css
+++ b/fadderjobb/static/bootstrap/lux.bootstrap.css
@@ -2141,11 +2141,11 @@ textarea.form-control {
   margin-left: -1.25rem;
 }
 
-.form-check-input:disabled ~ .form-check-label {
+.form-check-input:disabled ~ .filter-checkbox-label {
   color: #919aa1;
 }
 
-.form-check-label {
+.filter-checkbox-label {
   margin-bottom: 0;
 }
 
@@ -2221,7 +2221,7 @@ textarea.form-control {
   display: block;
 }
 
-.was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
+.was-validated .form-check-input:valid ~ .filter-checkbox-label, .form-check-input.is-valid ~ .filter-checkbox-label {
   color: #4BBF73;
 }
 
@@ -2327,7 +2327,7 @@ textarea.form-control {
   display: block;
 }
 
-.was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
+.was-validated .form-check-input:invalid ~ .filter-checkbox-label, .form-check-input.is-invalid ~ .filter-checkbox-label {
   color: #d9534f;
 }
 
