--- a/templates/jobsignup.html
+++ b/templates/jobsignup.html
@@ -26,14 +26,14 @@
                 <label>
                     <input type="checkbox" name="signedup"
                            value="0" {% if filter_signedup == "0" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-no"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="signedup"
                            value="1" {% if filter_signedup == "1" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-yes"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
                 </label>
             </div>
             <div class="filter-checkbox-caret"></div>
@@ -44,14 +44,14 @@
                 <label>
                     <input type="checkbox" name="full"
                            value="0" {% if filter_full == "0" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-no"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="full"
                            value="1" {% if filter_full == "1" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-yes"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
                 </label>
             </div>
             <div class="filter-checkbox-caret"></div>
@@ -62,14 +62,14 @@
                 <label>
                     <input type="checkbox" name="leavequeue"
                            value="0" {% if filter_leavequeue == "0" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-no"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="leavequeue"
                            value="1" {% if filter_leavequeue == "1" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-yes"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
                 </label>
             </div>
             <div class="filter-checkbox-caret"></div>
@@ -80,14 +80,14 @@
                 <label>
                     <input type="checkbox" name="enterqueue"
                            value="0" {% if filter_enterqueue == "0" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-no"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-no"></span>
                 </label>
             </div>
             <div class="filter-checkbox">
                 <label>
                     <input type="checkbox" name="enterqueue"
                            value="1" {% if filter_enterqueue == "1" %}checked{% endif %}>
-                    <span class="form-check-label form-check-label-yes"></span>
+                    <span class="filter-checkbox-label filter-checkbox-label-yes"></span>
                 </label>
             </div>
             <div class="filter-checkbox-caret"></div>
