--- a/fadderjobb/static/css/jobsignup.css
+++ b/fadderjobb/static/css/jobsignup.css
@@ -19,8 +19,31 @@
     height: 52px;
 }
 
-.filter-select {
-    padding: 0 15px;
+.filter-dropdown-container {
+    height: 52px;
+    min-width: 300px;
+}
+
+.filter-dropdown-container * {
+    background-color: #f7f7f9;
+}
+
+.filter-dropdown-container button {
+    height: 100%;
+    width: 100%;
+}
+
+.dropdown-item:hover {
+    background-color: black;
+    color: white;
+}
+
+.dropdown-item {
+    padding: .5rem 1.5rem;
+}
+
+.dropdown-menu {
+    width: 100%;
 }
 
 .filter-checkbox-container, .filter-select {
@@ -41,6 +64,7 @@
     width: 52px;
     left: 0;
     opacity: 0;
+    box-shadow: 0 1px 1px 0 #646464;
 }
 
 .filter-checkbox-caret.noanimate {
