--- a/fadderjobb/static/css/jobsignup.css
+++ b/fadderjobb/static/css/jobsignup.css
@@ -46,6 +46,12 @@
     width: 100%;
 }
 
+.dropdown-toggle {
+    text-transform: none;
+    font-size: 100%;
+    font-weight: 100;
+}
+
 .filter-checkbox-container, .filter-select {
     position: relative;
     display: flex;
@@ -102,7 +108,6 @@
     display: inline-block;
     padding: 15px;
     font-weight: bold;
-    font-size: 120%;
     height: 100%;
 
     z-index: 2;
