--- a/fadderjobb/static/css/jobsignup.css
+++ b/fadderjobb/static/css/jobsignup.css
@@ -56,6 +56,12 @@
     font-size: 100%;
     font-weight: 200;
     letter-spacing: 1px;
+    text-align: left;
+}
+
+.dropdown-toggle[aria-expanded=true] {
+    background-color: #222 !important;
+    color: white !important;
 }
 
 .filter-checkbox-container {
