--- a/fadderjobb/static/css/jobsignup.css
+++ b/fadderjobb/static/css/jobsignup.css
@@ -21,6 +21,10 @@
     letter-spacing: 1px;
 }
 
+.filter-search:focus {
+    box-shadow: none;
+}
+
 .filter-dropdown-container {
     height: 52px;
     min-width: 300px;
@@ -57,6 +61,30 @@
     font-weight: 200;
     letter-spacing: 1px;
     text-align: left;
+
+    padding: 15px;
+}
+
+.dropdown-toggle:hover {
+    background-color: #f7f7f9;
+    transition: background-color .05s linear;
+}
+
+.dropdown-toggle::before {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-right: 0.5em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+}
+
+.dropdown-toggle::after {
+    display: none;
 }
 
 .dropdown-toggle[aria-expanded=true] {
