--- a/fadderjobb/static/css/jobsignup.css
+++ b/fadderjobb/static/css/jobsignup.css
@@ -49,6 +49,12 @@
     font-size: 100%;
     font-weight: 200;
     letter-spacing: 1px;
+
+    color: black;
+}
+
+.dropdown-item:hover {
+    cursor: pointer;
 }
 
 .dropdown-menu {
