--- a/templates/jobsignup.html
+++ b/templates/jobsignup.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load sass_tags %}
 
 {% block title %}Jobbanmälan - {% endblock title %}
 
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
-    <link rel="stylesheet" href="{% static 'css/jobsignup.css' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/jobsignup.sass' %}">
 {% endblock head %}
 
 {% block scripts %}
