--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load sass_tags %}
 
 {% block title %}{{ fadder.user.username }}'s profile - {% endblock title %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/profile.sass' %}">
 {% endblock head %}
 
 {% block content %}
