--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static from staticfiles %}
 {% load startswith from filters %}
+{% load sass_tags %}
 
 <!DOCTYPE html>
 <!--suppress HtmlUnknownTarget -->
@@ -9,7 +10,7 @@
     <title>{% block title %}{% endblock title %}Fadderjobb</title>
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/lux.bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/base.sass' %}">
     <link rel="icon" type="image/x-icon" href="{% static '/favicon.ico' %}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     {% block head %}{% endblock head %}
@@ -20,7 +21,7 @@
 <script src="{% static 'js/index.js' %}"></script>
 {% block scripts %}{% endblock scripts %}
 
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Fadderjobb</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
