--- a/templates/jobdetails.html
+++ b/templates/jobdetails.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load sass_tags %}
 
 {% block title %}{{ job.name }} - {% endblock title %}
 
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
-    <link rel="stylesheet" href="{% static 'css/jobdetails.css' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/jobdetails.sass' %}">
 {% endblock head %}
 
 {% block content %}
