--- a/templates/topchart.html
+++ b/templates/topchart.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load sass_tags %}
 
 {% block title %}Topplistan - {% endblock title %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/topchart.css' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/topchart.sass' %}">
 {% endblock head %}
 
 {% block content %}
