--- a/templates/topchart.html
+++ b/templates/topchart.html
@@ -6,6 +6,7 @@
 
 {% block head %}
     <link rel="stylesheet" href="{% sass_src 'sass/topchart.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/mobile/m_topchart.sass' %}">
 {% endblock head %}
 
 {% block content %}
