--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/lux.bootstrap.css' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/base.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/mobile/m_base.sass' %}">
     <link rel="icon" type="image/x-icon" href="{% static '/favicon.ico' %}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     {% block head %}{% endblock head %}
