More mobile design

--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -4,3 +4,25 @@ body.mobile
     .nav-link
         font-size: 250%
         padding: 1.3rem .75rem
+
+    .navbar-toggler
+        width: 5vh
+        height: 5vh
+        font-size: 300%
+
+    .navbar-brand
+        font-size: 300%
+
+    h1, h2, h3
+        font-size: 150%
+        margin-top: 4rem
+        margin-bottom: 1rem
+
+        &:first-of-type
+            margin-top: 0
+
+    .content
+        padding: 2vh 2vw
+
+    .tooltip
+        font-size: 150%
