--- a/fadderjobb/static/sass/mobile/m_jobsignup.sass
+++ b/fadderjobb/static/sass/mobile/m_jobsignup.sass
@@ -11,6 +11,7 @@ body.mobile
 
     .filter, .filter-button
         min-width: 94vw
+        height: 4vh
 
     .filter-button
         font-size: 130%
@@ -26,3 +27,9 @@ body.mobile
         display: flex
         flex-direction: row
         justify-content: space-between
+
+    .dropdown-item
+        font-size: 300%
+
+    .filter-dropdown-container
+        padding-left: 0
