--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,6 +7,7 @@
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{% sass_src 'sass/login.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/mobile/m_form.sass' %}">
 {% endblock head %}
 
 
