--- a/templates/jobdetails.html
+++ b/templates/jobdetails.html
@@ -7,6 +7,7 @@
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{% sass_src 'sass/jobdetails.sass' %}">
+    <link rel="stylesheet" href="{% sass_src 'sass/mobile/m_jobdetails.sass' %}">
 {% endblock head %}
 
 {% block content %}
