--- a/fadderjobb/static/sass/mobile/m_jobsignup.sass
+++ b/fadderjobb/static/sass/mobile/m_jobsignup.sass
@@ -23,7 +23,7 @@ body.mobile
     .filter-search
         font-size: 120%
 
-    .filter-checkbox-container
+    .filter-checkbox-wrapper
         display: flex
         flex-direction: row
         justify-content: space-between
