More minor styling

--- a/fadderjobb/static/sass/jobsignup.sass
+++ b/fadderjobb/static/sass/jobsignup.sass
@@ -20,6 +20,8 @@
 .filter-dropdown-container
     height: 52px
     min-width: 300px
+    padding-left: 0
+
     *
         background-color: #f7f7f9
     button
@@ -131,7 +133,6 @@
 
 .divider
     width: 94vw
-    border: 2px solid rgba(0, 0, 0, .1)
 
 .day
     margin-top: 30px
