--- a/fadderjobb/static/sass/mobile/m_base.sass
+++ b/fadderjobb/static/sass/mobile/m_base.sass
@@ -10,6 +10,16 @@ body.mobile
         height: 5vh
         font-size: 300%
 
+        background-color: lightgray
+
+        transition: background-color .1s linear
+
+        &:focus
+            outline: none
+
+        &.collapsed
+            background-color: transparent
+
     .navbar-brand
         font-size: 300%
 
