--- a/fadderjobb/static/sass/mobile/m_jobsignup.sass
+++ b/fadderjobb/static/sass/mobile/m_jobsignup.sass
@@ -31,5 +31,5 @@ body.mobile
     .dropdown-item
         font-size: 300%
 
-    .filter-dropdown-container
-        padding-left: 0
+    .divider
+        border: 2px solid rgba(0, 0, 0, .1)
